	  inverted layers. Also, fix XOR and OR rendering modes for GDK.
	* render.c: Fix bug in alpha usage, which wasn't allowing transparency
	  on exported images.
	* tests/golden/*: Update all golden files, since the png export wasn't
	  using alpha correctly, so all test files now render with a slightly
	  different color (since the black can bleed through the blue color
	  a tiny bit).

2008-1-4  Stuart Brorson (sdb@cloud9.net)
	* src/callbacks.c, src/gerbv_screen.h, src/icons.h, 
	src/interface.c: Added pointer button to toggletools on task
	bar.
	
2008-01-04  Stefan Petersen  <spe>

	* src/interface.c: Changed menu entries where another window is popped
	  up so text ends in three dots. "Save as" and "Print" uses built in
	  GTK operations, so the hack there got not so nice. Is there other 
	  ways, like predefined with the three dots?
	* src/draw-gdk.c: Fixed aperture macro drawing in GDK target as well.

2008-01-03  Julian Lamb
	* draw.c: Fix some amacro rendering problems that Stefan uncovered.
	* draw.c: Change the thermal rendering logic to do rendering without
	  push/pop operations, so that vector output will work (previously, the
	  cairo export defaulted to an image export for thermal rendering).
	* render.c: Fix autoscaling for new amacro test (although the hack will be
	  unnecessary after we reorder the amacro rendering process to correctly
	  calculate the extents of each flashed macro aperture).
	  
2008-1-2  Stuart Brorson (sdb@cloud9.net)
	* src/Makefile.am, src/icons.h, src/interface.c:
	Added icons for toggletool buttons: move, zoom, and measure.

2007-12-31  Julian Lamb
	* gerbv.c: Rework project filename saving to save all layers with relative
	  pathnames, relative to the project file location. This allows projects
	  to be relocated, and fixes the second half of bug# 1443885.
	* gerbv.c: More work on command line parsing.
	* interface.c, render.c, callbacks.c: Reimplement different rendering modes