@@ -36,7 +36,7 @@ extern "C" {
 /*
  * parse gerber file pointed to by fd
  */
-gerb_image_t *parse_gerb(gerb_file_t *fd);
+gerb_image_t *parse_gerb(gerb_file_t *fd, gchar *directoryPath);
 gboolean gerber_is_rs274x_p(gerb_file_t *fd);
 gboolean gerber_is_rs274d_p(gerb_file_t *fd);
 
