@@ -160,4 +160,5 @@ test-layer-offset-1  |  test-layer-offset-1.gbx
 test-layer-rotation-1  |  test-layer-rotation-1.gbx
 test-layer-scale-factor-1  |  test-layer-scale-factor-1.gbx
 test-layer-step-and_repeat-1  |  test-layer-step-and_repeat-1.gbx
+test-include-file-1  |  test-include-file-1.gbx
 
